fix layout issues

--- a/src/app/[locale]/sections/AboutUs/styles.module.scss
+++ b/src/app/[locale]/sections/AboutUs/styles.module.scss
@@ -2,10 +2,11 @@
 
 .aboutUsSection {
   padding: 50px;
+  min-height: 700px;
   background-image: url("/wave-top.png");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top -550px left 0;
+  background-position: top -400px left 0;
   display: flex;
   justify-content: center;
   align-items: center;
