--- a/src/app/[locale]/sections/Events/styles.module.scss
+++ b/src/app/[locale]/sections/Events/styles.module.scss
@@ -2,6 +2,7 @@
 
 .eventsSection {
   padding: 50px;
+  min-height: 700px;
   background-image: url("/wave-bottom.png"), url("/circle-overlap.png");
   background-size: cover, contain;
   background-repeat: no-repeat, no-repeat;
